--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.7.2
+distlib==0.3.6
 Django==4.2.1
-djangorestframework==3.14.0
-mysqlclient==2.1.1
-python-decouple==3.8
-pytz==2023.3
+django-cors-headers==4.0.0
+filelock==3.12.0
+platformdirs==3.5.1
 sqlparse==0.4.4
 tzdata==2023.3
+virtualenv==20.23.0
