--- a/backend/.env.template
+++ b/backend/.env.template
@@ -6,3 +6,6 @@ DB_USER = 'nombre de tu usuario de mysql'
 DB_PASSWORD = 'la contraseña de la base de datos'
 DB_HOST = 'host de la base de datos (localhost)'
 DB_PORT = 'puerto de la base de datos'
+CLOUD_NAME = 'usuario de cloudinary'
+API_KEY = 'api key de cloudinary'
+API_SECRET = 'api secret de cloudinary'
