--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,9 +6,11 @@ Django==4.2.1
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.0.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 idna==3.4
 mysqlclient==2.1.1
 Pillow==9.5.0
+PyJWT==2.7.0
 python-decouple==3.8
 pytz==2023.3
 requests==2.31.0
