--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ django-cloudinary-storage==0.3.0
 django-cors-headers==4.0.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-nested-routers==0.93.4
 idna==3.4
 mysqlclient==2.1.1
 Pillow==9.5.0
