--- a/backend/.env.template
+++ b/backend/.env.template
@@ -9,3 +9,4 @@ DB_PORT = 'puerto de la base de datos'
 CLOUD_NAME = 'usuario de cloudinary'
 API_KEY = 'api key de cloudinary'
 API_SECRET = 'api secret de cloudinary'
+ACCESS_TOKEN_MP ='token de tu usuario de mercado pago'
