--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-nested-routers==0.93.4
 idna==3.4
+mercadopago==2.2.0
 mysqlclient==2.1.1
 Pillow==9.5.0
 PyJWT==2.7.0
