--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "server": "json-server --port 5000 --watch src/data/data.json"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
